# chess-stuff

./: .gitignore  Cargo.toml  inputs.py  vast
src/: main.rs
train/: .gitignore  inputs.py  output.play  play.py  play.sh  requirements.txt  train  train.py  train_old.txt
