[package]
name = "chess-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "*"
vampirc-uci = "*"
rand = "*"
pgn-reader = "*"
flate2 = { version = "*", features = ["zlib-ng"], default-features = false }